# FastApiGetProgram

./: .pre-commit-config.yaml  index.html  main.py  pyproject.toml
.github/workflows/: python-checks.yaml
programms-catalog/: app_lifespan.py  index.html  main.py  manage.py
programms-catalog/api/api_v1/: __init__.py  dependencies.py
programms-catalog/api/api_v1/devices/views/: __init__.py  detail_views.py  list_views.py
programms-catalog/api/api_v1/programs/views/: __init__.py  details_views.py  list_views.py
programms-catalog/commands/: cli.py  tokens.py
programms-catalog/core/: config.py
programms-catalog/dependensies/: auth.py  devices.py  programs.py
programms-catalog/rest/: __init__.py  main_views.py
programms-catalog/rest/device/: __init__.py  list_views.py
programms-catalog/rest/programs/: __init__.py  list_views.py
programms-catalog/schemas/: programs.py
programms-catalog/schemas/devices/: devices.py  devices_constant.py
programms-catalog/schemas/programs/: exceptions.py  programs.py  programs_constants.py
programms-catalog/service/auth/: redis_tokens_helper.py  redis_users_helper.py  tokens_helper.py  users_helper.py
programms-catalog/storage/devices/: crud.py  exceptions.py
programms-catalog/storage/program/: __init__.py  crud.py  exceptions.py
programms-catalog/templates/: about.html  base.html  home.html
programms-catalog/templates/components/: navbar.html
programms-catalog/templates/devices/: list.html
programms-catalog/templates/programs/: list.html
programms-catalog/templating/: jinja_template.py
programms-catalog/testing/: conftest.py
programms-catalog/testing/test_api/: conftest.py
